objects/FieloPLT__Rule__c.object
<CustomObject>
    <fields>
        <fullName>Star_Conversion_Mode__c</fullName>
        <label>Star Conversion Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Star_Conversion_Value__c</fullName>
        <label>Star Conversion Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_Expiration_Date__c</fullName>
        <label>Star Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Star_Expiration_Mode__c</fullName>
        <label>Star Expiration Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Star_Field_Name__c</fullName>
        <label>Star Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_Reflection__c</fullName>
        <label>Star Reflection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_months_until_expiration__c</fullName>
        <label>Star months until expiration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>